--- a/elibrary-controller/src/main/resources/templates/fragments/addCategoryModal.html
+++ b/elibrary-controller/src/main/resources/templates/fragments/addCategoryModal.html
@@ -1,6 +1,8 @@
 <!doctype html>
-
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head>
+    <title>Modal fragment to add category</title>
+</head>
 
 <body>
 
