--- a/elibrary-controller/src/main/resources/templates/users/userUpdate.html
+++ b/elibrary-controller/src/main/resources/templates/users/userUpdate.html
@@ -41,7 +41,7 @@
                 <tbody class="text-left">
                 <tr><th scope="row" class="text-left">Library card number</th><td th:text="${userDto.id}"></td></tr>
                 <tr><th scope="row">Avatar</th><td>
-                    <img class="img-thumbnail" src="#" th:src="@{userDto.avatarUrl}"
+                    <img class="img-thumbnail" src="#" th:src="${userDto.avatarUrl}"
                          alt="Avatar didn't find" width="150" height="150"/>
                     <div class="mb-3">
                         <label class="form-label invisible" for="fileAvatar">Choose file</label>
