Add changelog.xml files

--- a/elibrary-controller/src/main/resources/templates/admin/adminUsersList.html
+++ b/elibrary-controller/src/main/resources/templates/admin/adminUsersList.html
@@ -55,7 +55,7 @@
             <h1>Users</h1>
         </div>
         <div class="bd-content ps-lg-4">
-        <table class="table">
+        <table class="table table-striped table-hover">
             <thead class="thead-dark">
             <tr>
                 <th scope="col">#</th>
