--- a/elibrary-controller/src/main/resources/templates/books/bookInfo.html
+++ b/elibrary-controller/src/main/resources/templates/books/bookInfo.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Ales' Rachko, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.80.0">
-    <title>Users</title>
+    <title>Book info</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/starter-template/">
 
