--- a/elibrary-controller/src/main/resources/templates/fragments/upperNavbar.html
+++ b/elibrary-controller/src/main/resources/templates/fragments/upperNavbar.html
@@ -25,6 +25,7 @@
                         <li><a class="dropdown-item" th:href="@{/admin/books}">Manage books</a></li>
                         <li><a class="dropdown-item" th:href="@{/admin/users}">Manage users</a></li>
                         <li><a class="dropdown-item" th:href="@{/admin/categories}">Manage categories</a></li>
+                        <li><a class="dropdown-item" th:href="@{/admin/reviews}">Manage reviews</a></li>
                     </ul>
                 </li>
             </ul>
