--- a/elibrary-controller/src/main/resources/templates/admin/adminBooksList.html
+++ b/elibrary-controller/src/main/resources/templates/admin/adminBooksList.html
@@ -41,7 +41,7 @@
                 <small><a class="text-sm-start m-0 link-primary" th:href="@{books(categoryId=${currentCategoryDto.getId()})}"
                           th:text="${currentCategoryDto.getCategoryName}"></a></small>
             </div>
-            <table class="table">
+            <table class="table table-striped table-hover">
                 <thead class="thead-dark">
                 <tr>
                     <th scope="col">#</th>
