--- a/elibrary-controller/src/main/resources/templates/admin/adminSubscriptionList.html
+++ b/elibrary-controller/src/main/resources/templates/admin/adminSubscriptionList.html
@@ -53,7 +53,7 @@
                     <button class="btn btn-outline-primary" type="submit">Add</button>
                 </div>
             </form>
-            <table class="table">
+            <table class="table table-striped table-hover">
                 <thead class="thead-dark">
                 <tr>
                     <th scope="col">#</th>
