--- a/elibrary-controller/src/main/resources/templates/admin/adminSubscriptionList.html
+++ b/elibrary-controller/src/main/resources/templates/admin/adminSubscriptionList.html
@@ -66,7 +66,7 @@
                     <th scope="col">
                         <a th:href="@{subscriptions(status=${currentStatusCode}, size=${pageSubscriptionDto.size},
                                page=${pageSubscriptionDto.getNumber()},
-                               sort=${pageSubscriptionDto.getSort().toString().replace(': ', ',')},
+                               sort=${'created,ASC'},
                                userId=${userId})}" class="text-decoration-none">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z"></path>
@@ -74,7 +74,7 @@
                     </a>
                         <a th:href="@{subscriptions(status=${currentStatusCode}, size=${pageSubscriptionDto.size},
                                page=${pageSubscriptionDto.getNumber()},
-                               sort=${pageSubscriptionDto.getSort().toString().replace(': ', ',')},
+                               sort=${'created,DESC'},
                                userId=${userId})}" class="text-decoration-none">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-short" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z"></path>
@@ -84,14 +84,14 @@
                     <th scope="col">
                         <a th:href="@{subscriptions(status=${currentStatusCode}, size=${pageSubscriptionDto.size},
                            page=${pageSubscriptionDto.getNumber()},
-                           sort=${pageSubscriptionDto.getSort().toString().replace(': ', ',')},
+                           sort=${'deadline,ASC'},
                            userId=${userId})}" class="text-decoration-none">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z"></path>
                         </svg>
                     </a>
                         <a th:href="@{subscriptions(status=${currentStatusCode}, size=${pageSubscriptionDto.size},
-                           page=${pageSubscriptionDto.getNumber()}, sort=${pageSubscriptionDto.getSort().toString().replace(': ', ',')})}" class="text-decoration-none">
+                           page=${pageSubscriptionDto.getNumber()}, sort=${'deadline,DESC'})}" class="text-decoration-none">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-short" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z"></path>
                             </svg>
